--- a/src/main/resources/templates/message_list.html
+++ b/src/main/resources/templates/message_list.html
@@ -86,7 +86,9 @@
 
 <hr/>
 
-<a href="/webapi/logout">Logout</a>
+<form action="/webapi/logout">
+    <input style="background-color: #f44336" type="submit" value="Logout" />
+</form>
 
 </body>
 </html>
