2-stage registration, cleanup

--- a/src/main/resources/templates/message_list.html
+++ b/src/main/resources/templates/message_list.html
@@ -26,7 +26,7 @@
 <div>
 <form action="/webapi/sendMessage" method="post">
     <label for="recipientId">To</label>
-    <input type="text" id="recipientId" name="recipientId" value="" placeholder="Your friend´s id, must be an existing user"/><br/>
+    <input type="text" id="recipientId" name="recipientId" value="" placeholder="Your friend´s id, must be an existing user" autofocus="autofocus"/><br/>
     <label for="message">Your message</label><br/>
     <textarea id="message" name="message" placeholder="Maximum length 255 characters, no HTML allowed"></textarea><br/>
     <input type="submit" value="send"/>
