--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -8,7 +8,7 @@
 <body>
 
 An error has happened: <span th:utext="${errormsg}"></span><br/>
-You can <a href="#" onClick="history.back()">return back</a> or go to the <a href="/index.html\">homepage</a>.
+Please return back to <a th:href="${link}"><span th:utext="${pagetitle}"></span></a> or use "back" button in your browser.
 		
 </body>
 </html>
